# my-research-mcp-server

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml
arxiv_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
research_papers/ai_access_control/: README.md  ingest_sources.py  ingest_sources.sh  sources.json
tests/: test_server.py
