[project]
name = "my-research-mcp-server"
version = "2.0.0"
description = "MCP server for multi-source academic research: arXiv, Semantic Scholar, OpenAlex, CORE, Crossref, institutional repositories (MIT, Harvard, Cornell, Penn), cloud vendor docs, IAM docs, GitHub — with full-text PDF indexing, DuckDB analytics, and semantic vector search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "arxiv", "research", "pdf", "full-text-search", "semantic-scholar", "dspace", "openalex", "crossref", "doi", "core", "cloud-docs", "iam", "duckdb", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "pymupdf>=1.23.0",
    "duckdb>=1.0.0",
    "google-auth>=2.0.0",
    "fastembed>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
my-research-mcp = "server:mcp.run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
